# Rive2d

./: .gitignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  vite.config.js
docs/: model3-json-format.md
src/: config.css  config.html  config.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  layer_shell.rs  lib.rs  lpk.rs  tray.rs
src/config/: App.vue  main.js
