[package]
name = "rive2d"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
